<resources>
    <string name="freshchat_app_id" translatable="false">12fdcb5b-dd2d-4d96-b5a1-a623e5c7633e</string>
    <string name="freshchat_app_key" translatable="false">e770aac6-9f93-42b6-9495-9904f1a2a3a4</string>
    <string name="drawer_open" translatable="false">drawer_open</string>
    <string name="drawer_close" translatable="false">drawer_close</string>
    <string name="digits">0123456789</string>
    <string name="digits_with_minus">-0123456789</string>
    <string name="digits_with_minus_dot">-0123456789.</string>
    <string name="digits_without_special" translatable="false">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz01234567890</string>
    <string name="digits_without_special_exclude_space" translatable="false">ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz01234567890</string>
    <string name="catalog_enable_duration">Catalog Enable Duration</string>
    <string name="app_name">Wishbook</string>
    <string name="album_view">Select photo album</string>
    <string name="image_view">Tap to select images</string>
    <string name="facebook_app_id">1326035920856844</string>
    <string name="facebook_test_app_id" translatable="false">751422221940068</string>
    <string name="fb_login_protocol_scheme" translatable="false">1326035920856844</string>
    <string name="selected">selected</string>
    <string name="limit_exceeded">Can select a maximum of %d images</string>
    <string name="permission_denied_albums">Allow access to photos, media and files on your device to view albums</string>
    <string name="permission_denied_images">Allow access to photos, media and files on your device to view images</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="error_null_cursor">Oops, something went wrong!</string>
    <string name="typeprompt">Company Type</string>
    <string name="freshchat_file_provider_authority">com.wishbook.catalog.provider</string>
    <string name="title_activity_login">com.wishbook.catalog.Logic.Login.Login</string>
    <string-array name="requesttype">
        <item>Buyer</item>
        <item>Supplier</item>
    </string-array>
    <string-array name="requesttype_supplier">
        <item>Supplier</item>
        <item>Buyer</item>
    </string-array>
    <string-array name="user_type">
        <item>Administrator</item>
        <item>Salesperson</item>

    </string-array>
    <string-array name="buyertype">
        <item>Agents</item>
        <item>distributor</item>
        <item>online-retailer</item>
        <item>other</item>
        <item>Resellers</item>
        <item>Retailer</item>
        <item>Semi-wholesaler</item>
        <item>wholesaler</item>

    </string-array>
    <string name="catalog_type">ctype</string>
    <string-array name="photo_shoot_type">
        <item>Live Model Photoshoot</item>
        <item>White Background or Face-cut</item>
        <item>Photos without Model</item>
    </string-array>
    <string-array name="catalog_type_disaplay">
        <item>Catalog</item>
        <item>Non-Catalog</item>
    </string-array>
    <string-array name="usertype">
        <item>Manufacturer</item>
        <item>Not Manufacturer</item>
    </string-array>
    <string-array name="reseller_share_type" >
        <item>Share on Whatsapp</item>
        <item>Share on Facebook</item>
        <item>Share via link</item>
        <item>Save to gallery</item>
        <item>Other</item>
    </string-array>
    <string-array name="paymentchoice">
        <item>NetBanking/Credit/Debit Card</item>
        <item>Paytm</item>
        <item>Mobikwik</item>
        <item>NEFT</item>
        <item>Cheque</item>
        <item>Other</item>
        <item>credit payment</item>
    </string-array>
    <string-array name="paymentchoice_option2">
        <item>NetBanking/Credit/Debit Card</item>
        <item>NEFT</item>
        <item>Cheque</item>
        <item>Other</item>
        <item>credit payment</item>
    </string-array>
    <string-array name="order_spinner">
        <item>All</item>
        <item>Placed</item>
        <item>Dispatched</item>
        <item>Cancelled</item>
    </string-array>
    <string-array name="my_catalog_spinner">
        <item>Enabled</item>
        <item>Disabled</item>
    </string-array>
    <string-array name="enquiry_spinner">
        <item>All</item>
        <item>Open</item>
        <item>Resolved</item>
    </string-array>
    <string name="about_us_text">Wishbook\'s vision is to digitize the apparel/fashion production &amp; sales information.
        This digitized information, starting with their product catalogs for Fashion &amp; Apparel companies, will allow easy sharing of
        new catalog / product launches down the entire B2B distribution chain, offer an open B2B marketplace, and take it to the existing marketplaces.
        Combined with the production Dashboard &amp; SaaS ERP, the reverse integration promises to bring in an unprecedented level of efficiency into the eco-system.
        Our learnings coming from years of technology / product development &amp; running traditional textile manufacturing &amp; e-Commerce companies have been factor into
        technology products meant for the Fashion / Apparel companies, many of them SMEs market in our new venture, Wishbook Infoservices.
        Wishbook Infoservices started off as Triveni Labs.</string>
    <string name="contact_us_heading_label">Wishbook Info Services Pvt Ltd</string>
    <string name="about_us_policies_heading">Wishbook infoservices</string>
    <string name="contact_us_text">If you have any questions or just want to know more information, please contact us on:</string>
    <string name="website_link">www.wishbook.io</string>
    <string name="location_text">1077-78 Anupam Textile Market
Ring Road, Surat, Gujarat 395002</string>
    <string name="email_address">support@wishbook.io</string>
    <string name="contact_mobile">+91 8469218980</string>
    <string name="contact_landline">+91 261 6718989</string>
    <string name="help_heading_label">Welcome to Wishbook</string>
    <string name="help_text">B2B App digitizes fashion catalog distribution &amp; sales process</string>
    <string name="help_btn_1">Browsing Catalogs</string>
    <string name="help_btn_2">Managing Selections</string>
    <string name="help_btn_3">Adding visits</string>
    <string name="help_btn_4">Placing Orders</string>
    <string name="browse_catalogs_label">Browse Catalogs</string>
    <string name="manage_selections_label">Manage Selections</string>
    <string name="add_visits_label">Adding Visits</string>
    <string name="place_orders_label">Placing Orders</string>
    <string name="pswds_nt_matched">Passwords doesn\'t match</string>
    <string name="current_pswd_not_matched">Please enter correct password</string>
    <string name="field_empty">Field cannot be empty</string>
    <string name="password_less_than_6" translatable="false">Password cannot be less than 6 Digits</string>
    <string name="invalid_mobile">Invalid mobile number</string>
    <string name="emptymobileuser">both username and mobile cannot be empty</string>
    <string name="passwordempty">password cannot be empty</string>
    <string name="passwordshort">password too short</string>
    <string name="defaultCode">+91</string>
    <string name="select_state">Select state</string>
    <string name="select_city">Select city</string>
    <string name="select_brands">Choose a brand</string>
    <string name="select_single_category">Choose a category</string>
    <string name="select_category">Select categories</string>
    <string name="select_requesttype"> Invite the selected contacts as</string>
    <string name="select_grouptype">Select the group type</string>
    <string name="select_supplier">Please select your supplier</string>
    <string name="select_buyer">Select the type of buyer</string>
    <string name="select_buyer_notype">Select buyer</string>
    <string name="select_catalog">Select the catalog to order</string>
    <string name="select_broker">Broker name</string>
    <string name="select_broker_spinner">Select broker</string>
    <string name="select_selection">Choose a selection</string>
    <string name="select_usertype">Select user type</string>
    <string name="select_buyersgroup">Select buyers group</string>
    <string name="no_item_found">No Items to display</string>
    <string name="choose_catalog_price">Private price</string>
    <string name="choose_catalog_public_price">Public price</string>
    <string name="choose_catalog_type">Choose the type of catalog</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_supplier_mobile_number">Enter supplier mobile number</string>
    <string name="mobile_number">Mobile number</string>
    <string name="relationship_supplier">Select the type of buyer you are</string>
    <string name="select_warehouse">Select warehouse</string>
    <string name="new_purchase_order">New purchase order</string>
    <string name="new_sales_order">New sales order</string>
    <string name="new_order">New Order</string>
    <string name="paymentoption">Select payment option</string>
    <string name="default_media_location_folder">WISHBOOK</string>
    <string name="merchant_id">WishBO64708594725163</string>
    <string name="website">WishBOWAP</string>
    <string name="change_type_dialog_title">Change catalog privacy type</string>
    <string name="private_type">Private</string>
    <string name="public_type">Public</string>
    <string name="add_public_price">Enter public price</string>
    <string name="enquiry_approved">Approved</string>
    <string name="enquiry_pending">Pending</string>
    <string name="enquiry_pending_reference">Pending References</string>
    <string name="enquiry_references_filled">References Filled</string>
    <string name="font_medium" translatable="false">sans-serif-medium</string>
    <string name="wishbook_buyer_support" translatable="false">Wishbook Buyer Support</string>
    <string name="wishbook_buyer_support_call_value" translatable="false">09978618989</string>
    <string name="wishbook_buyer_support_wp_value" translatable="false">https://wa.me/919978618989</string>
    <string name="call_colon" translatable="false">Call :</string>
    <string name="whatsapp_colon" translatable="false">Whatsapp :</string>
    <string name="wishbook_seller_support" translatable="false">Wishbook Seller Support</string>
    <string name="wishbook_seller_support_call_value" translatable="false">09537518989</string>
    <string name="wishbook_seller_support_wp_value" translatable="false">https://wa.me/919537518989</string>
    <string name="wishbook_upload_team" translatable="false">Wishbook Catalog Upload Team</string>
    <string name="wishbook_upload_team_call_value" translatable="false">08469218980</string>
    <string name="wishbook_upload_team_wp_value" translatable="false">https://wa.me/918469218980</string>
    <string name="join_singlepc_wp_group" translatable="false"> Join whatsapp group for single piece updates</string>
    <string name="join_fullset_wp_group" translatable="false">Join whatsapp group for full catalog updates</string>
    <string name="join_fashion_wp_group" translatable="false">Join whatsapp group for Fashion Trends News/Articles</string>
    <string name="join_facebook_page" translatable="false">For the latest fashion update from Wishbook, join us at Facebook!</string>
    <string name="fullset_whatsapp_group_value" translatable="false">https://chat.whatsapp.com/FudL9bnNVeC5JyCxuP5Oxs</string>
    <string name="singlepc_whatsapp_group_value" translatable="false">https://chat.whatsapp.com/BceuGPYBm9d0XxrLYqVkee</string>
    <string name="fashion_whatsapp_group_value" translatable="false">https://chat.whatsapp.com/GRVOZcoeDfiG6VDQIa6bd7</string>
    <string name="join_facebook_page_value" translatable="false"> https://www.facebook.com/wishbook2/?ref=bookmarks</string>
</resources>