<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@string/font_medium"
                android:text="@string/wishbook_buyer_support"
                android:textColor="@color/purchase_dark_gray"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call_colon"
                    android:textColor="@color/purchase_medium_gray"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_buyer_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:autoLink="phone"
                    android:clickable="true"
                    android:text="@string/wishbook_buyer_support_call_value"
                    android:textColor="@color/color_primary"
                    android:textSize="14sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whatsapp_colon"
                    android:textColor="@color/purchase_medium_gray"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:autoLink="web"
                    android:text="@string/wishbook_buyer_support_wp_value"
                    android:textColor="@color/color_primary"
                    android:textSize="14sp" />


            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@string/font_medium"
                android:text="@string/wishbook_seller_support"
                android:textColor="@color/purchase_dark_gray"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call_colon"
                    android:textColor="@color/purchase_medium_gray"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_seller_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:autoLink="phone"
                    android:clickable="true"
                    android:text="@string/wishbook_seller_support_call_value"
                    android:textColor="@color/color_primary"
                    android:textSize="14sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whatsapp_colon"
                    android:textColor="@color/purchase_medium_gray"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:autoLink="web"
                    android:text="@string/wishbook_seller_support_wp_value"
                    android:textColor="@color/color_primary"
                    android:textSize="14sp" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@string/font_medium"
                android:text="@string/wishbook_upload_team"
                android:textColor="@color/purchase_dark_gray"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call_colon"
                    android:textColor="@color/purchase_medium_gray"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_upload_team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:autoLink="phone"
                    android:clickable="true"
                    android:text="@string/wishbook_upload_team_call_value"
                    android:textColor="@color/color_primary"
                    android:textSize="14sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whatsapp_colon"
                    android:textColor="@color/purchase_medium_gray"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:autoLink="web"
                    android:text="@string/wishbook_upload_team_wp_value"
                    android:textColor="@color/color_primary"
                    android:textSize="14sp" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_join_whatsapp_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@string/font_medium"
                    android:text="@string/join_singlepc_wp_group"
                    android:textColor="@color/purchase_dark_gray"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/txt_singlepc_whatsapp_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:autoLink="web"
                        android:text="@string/singlepc_whatsapp_group_value"
                        android:textColor="@color/color_primary"
                        android:textSize="14sp" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@string/font_medium"
                    android:text="@string/join_fullset_wp_group"
                    android:textColor="@color/purchase_dark_gray"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/txt_full_set_whatsapp_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:autoLink="web"
                        android:text="@string/fullset_whatsapp_group_value"
                        android:textColor="@color/color_primary"
                        android:textSize="14sp" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@string/font_medium"
                    android:text="@string/join_fashion_wp_group"
                    android:textColor="@color/purchase_dark_gray"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/txt_fashion_whatsapp_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:autoLink="web"
                        android:text="@string/fashion_whatsapp_group_value"
                        android:textColor="@color/color_primary"
                        android:textSize="14sp" />


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@string/font_medium"
                android:text="@string/join_facebook_page"
                android:textColor="@color/purchase_dark_gray"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/txt_facebook_page_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:autoLink="web"
                    android:text="@string/join_facebook_page_value"
                    android:textColor="@color/color_primary"
                    android:textSize="14sp" />


            </LinearLayout>


        </LinearLayout>



    </LinearLayout>

</androidx.core.widget.NestedScrollView>


